Fix announceUrl to use URI instead of URL and add logging